--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-parallax-tilt": "^1.7.300",
     "react-router-dom": "^7.6.3",
+    "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0"
